err/mapy-package.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/alg3dpy'...
Compiling './lib/python3.5/site-packages/alg3dpy/alg3dpytest.py'...
***   File "./lib/python3.5/site-packages/alg3dpy/alg3dpytest.py", line 6
    print 'ckpt1'
                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/alg3dpy/checkarg.py'...
***   File "./lib/python3.5/site-packages/alg3dpy/checkarg.py", line 7
    print 'Invalid array size!'
                              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/alg3dpy/search.py'...
***   File "./lib/python3.5/site-packages/alg3dpy/search.py", line 41
    if group_b_vals[i]
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/alg3dpy/tests'...
Compiling './lib/python3.5/site-packages/alg3dpy/version.py'...
***   File "./lib/python3.5/site-packages/alg3dpy/version.py", line 1
    __version__ = 0.16.0
                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/alg3dpy-0.16.0.dist-info'...
Listing './lib/python3.5/site-packages/mapy'...
Listing './lib/python3.5/site-packages/mapy/integrate'...
Listing './lib/python3.5/site-packages/mapy/model'...
Listing './lib/python3.5/site-packages/mapy/model/constraints'...
Listing './lib/python3.5/site-packages/mapy/model/elements'...
Compiling './lib/python3.5/site-packages/mapy/model/elements/derivation_rotation_matrix.py'...
***   File "./lib/python3.5/site-packages/mapy/model/elements/derivation_rotation_matrix.py", line 15
    print 'Rab',Rab
              ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/mapy/model/elements/elemquad'...
Compiling './lib/python3.5/site-packages/mapy/model/elements/elemquad/__init__.py'...
*** Sorry: IndentationError: expected an indented block (__init__.py, line 36)
Listing './lib/python3.5/site-packages/mapy/model/elements/elemtria'...
Compiling './lib/python3.5/site-packages/mapy/model/elements/elemtria/cst_equations.py'...
***   File "./lib/python3.5/site-packages/mapy/model/elements/elemtria/cst_equations.py", line 17
    print 'L2 =',L2
               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/mapy/model/loads'...
Listing './lib/python3.5/site-packages/mapy/model/materials'...
Listing './lib/python3.5/site-packages/mapy/model/properties'...
Listing './lib/python3.5/site-packages/mapy/model/properties/composite'...
Compiling './lib/python3.5/site-packages/mapy/model/properties/composite/lamina.py'...
***   File "./lib/python3.5/site-packages/mapy/model/properties/composite/lamina.py", line 222
    if sum(eq_fracts) <> 1.:
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mapy/model/properties/composite/laminate.py'...
***   File "./lib/python3.5/site-packages/mapy/model/properties/composite/laminate.py", line 277
    print 'mapy - laminate - read_stack() - must input laminaprop'
                                                                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mapy/model/rebuild.py'...
***   File "./lib/python3.5/site-packages/mapy/model/rebuild.py", line 5
    print time.ctime() + ' started  - rebuilding grids and coordsys'
             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/mapy/modgen'...
Listing './lib/python3.5/site-packages/mapy/modgen/cylinder'...
Listing './lib/python3.5/site-packages/mapy/mplutils'...
Compiling './lib/python3.5/site-packages/mapy/mplutils/plot_defaults.py'...
***   File "./lib/python3.5/site-packages/mapy/mplutils/plot_defaults.py", line 120
    if leg <> None:
            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/mapy/reader'...
Listing './lib/python3.5/site-packages/mapy/renderer'...
Listing './lib/python3.5/site-packages/mapy/solver'...
Listing './lib/python3.5/site-packages/mapy/sympytools'...
Compiling './lib/python3.5/site-packages/mapy/sympytools/doperator.py'...
***   File "./lib/python3.5/site-packages/mapy/sympytools/doperator.py", line 61
    if expr.args <> ():
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mapy/sympytools/voperator.py'...
***   File "./lib/python3.5/site-packages/mapy/sympytools/voperator.py", line 269
    print test_cylinder_clpt().integrands
                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mapy/sympytools/voperator2.py'...
***   File "./lib/python3.5/site-packages/mapy/sympytools/voperator2.py", line 287
    print test_cylinder_clpt().integrands
                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mapy/version.py'...
***   File "./lib/python3.5/site-packages/mapy/version.py", line 1
    __version__ = 0.15.0
                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/mapy/writer'...
Compiling './lib/python3.5/site-packages/mapy/writer/abaqus.py'...
***   File "./lib/python3.5/site-packages/mapy/writer/abaqus.py", line 13
    print 'CYLINDER MODULE'
                          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/mapy_package-0.15.0.dist-info'...
Listing './lib/python3.5/site-packages/numpy'...
Listing './lib/python3.5/site-packages/numpy/.libs'...
Listing './lib/python3.5/site-packages/numpy/compat'...
Listing './lib/python3.5/site-packages/numpy/core'...
Listing './lib/python3.5/site-packages/numpy/core/include'...
Listing './lib/python3.5/site-packages/numpy/core/include/numpy'...
Listing './lib/python3.5/site-packages/numpy/core/lib'...
Listing './lib/python3.5/site-packages/numpy/core/lib/npy-pkg-config'...
Listing './lib/python3.5/site-packages/numpy/core/tests'...
Listing './lib/python3.5/site-packages/numpy/core/tests/data'...
Listing './lib/python3.5/site-packages/numpy/distutils'...
Listing './lib/python3.5/site-packages/numpy/distutils/command'...
Listing './lib/python3.5/site-packages/numpy/distutils/fcompiler'...
Listing './lib/python3.5/site-packages/numpy/distutils/mingw'...
Listing './lib/python3.5/site-packages/numpy/distutils/tests'...
Listing './lib/python3.5/site-packages/numpy/doc'...
Listing './lib/python3.5/site-packages/numpy/f2py'...
Listing './lib/python3.5/site-packages/numpy/f2py/src'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/array_from_pyobj'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/assumed_shape'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/common'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/kind'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/mixed'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/parameter'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/regression'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/size'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/string'...
Listing './lib/python3.5/site-packages/numpy/fft'...
Listing './lib/python3.5/site-packages/numpy/fft/tests'...
Listing './lib/python3.5/site-packages/numpy/lib'...
Listing './lib/python3.5/site-packages/numpy/lib/tests'...
Listing './lib/python3.5/site-packages/numpy/lib/tests/data'...
Listing './lib/python3.5/site-packages/numpy/linalg'...
Listing './lib/python3.5/site-packages/numpy/linalg/tests'...
Listing './lib/python3.5/site-packages/numpy/ma'...
Listing './lib/python3.5/site-packages/numpy/ma/tests'...
Listing './lib/python3.5/site-packages/numpy/matrixlib'...
Listing './lib/python3.5/site-packages/numpy/matrixlib/tests'...
Listing './lib/python3.5/site-packages/numpy/polynomial'...
Listing './lib/python3.5/site-packages/numpy/polynomial/tests'...
Listing './lib/python3.5/site-packages/numpy/random'...
Listing './lib/python3.5/site-packages/numpy/random/tests'...
Listing './lib/python3.5/site-packages/numpy/testing'...
Listing './lib/python3.5/site-packages/numpy/testing/nose_tools'...
Listing './lib/python3.5/site-packages/numpy/testing/tests'...
Listing './lib/python3.5/site-packages/numpy/tests'...
Listing './lib/python3.5/site-packages/numpy-1.14.0.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
